--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,11 +6,19 @@ on: ["push", "pull_request"]
 
 jobs:
   
-  docker:
+  inventree:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build Docker Image
-        run: cd docker && docker build . --tag inventree:$(date +%s)
+      - name: Build Server Image
+        run: cd docker/inventree && docker build . --tag inventree:$(date +%s)
     
+  nginx:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build nginx Image
+        run: cd docker/nginx && docker build . --tag nxinx:$(date +%s)
+        
