Fix for tasks.py (??)

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -13,7 +13,12 @@
 [supervisord]
 ; Change this path if log files are stored elsewhere
 logfile=/home/inventree/log/supervisor.log
+user=inventree
 
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+; InvenTree Web Server Process
 [program:inventree-server]
 user=inventree
 directory=/home/inventree/src/InvenTree
@@ -26,6 +31,7 @@ startretries=3
 stderr_logfile=/home/inventree/log/server.err.log
 stdout_logfile=/home/inventree/log/server.out.log
 
+; InvenTree Background Worker Process
 [program:inventree-cluster]
 user=inventree
 directory=/home/inventree/src/InvenTree
