Update supervisor conf file

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -16,7 +16,9 @@ logfile=/home/inventree/log/supervisor.log
 user=inventree
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+
+[inet_http_server]
+port = 127.0.0.1:9001
 
 ; InvenTree Web Server Process
 [program:inventree-server]
