Include worker status in main API call

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -107,4 +107,5 @@ volumes:
             type: none
             o: bind
             # This directory specified where InvenTree data are stored "outside" the docker containers
-            device: c:/abcdef
+            # Change this path to a local system path where you want InvenTree data stored
+            device: /path/to/data
