--- a/docker/inventree/Dockerfile
+++ b/docker/inventree/Dockerfile
@@ -62,7 +62,7 @@ RUN apk add --no-cache cairo cairo-dev pango pango-dev
 RUN apk add --no-cache fontconfig ttf-droid ttf-liberation ttf-dejavu ttf-opensans ttf-ubuntu-font-family font-croscore font-noto
 
 # Python
-RUN apk add --no-cache python3 python3-dev python3-pip
+RUN apk add --no-cache python3 python3-dev
 
 # SQLite support
 RUN apk add --no-cache sqlite3
