--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,9 +1,11 @@
 upstream inventree {
-    server inventree:8080;
+    # Should point to the InvenTree web server container
+    server web:8000;
 }
 
 server {
 
+    # Listen for connection on (internal) port 80
     listen 80;
 
     location / {
@@ -14,8 +16,9 @@ server {
         client_max_body_size 100M;
     }
 
+    # Redirect any requests for static files
     location /static/ {
-        alias /home/inventree/static/;
+        alias /var/www/static/;
     }
 
 }
