--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -11,8 +11,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Build Server Image
-        run: cd docker/inventree && docker build . --tag inventree:$(date +%s)
-      - name: Build nginx Image
-        run: cd docker/nginx && docker build . --tag nxinx:$(date +%s)
-        
+      - name: Build Docker Image
+        run: cd docker && docker build . --tag inventree:$(date +%s)
+      
