--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -7,7 +7,7 @@ on:
     types: [published]
 
 jobs:
-  server_image:
+  publish_image:
     name: Push InvenTree web server image to dockerhub
     runs-on: ubuntu-latest
     steps:
@@ -20,19 +20,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: inventree/inventree
           tag_with_ref: true
-          dockerfile: docker/inventree/Dockerfile
-
-  nginx_image:
-    name: Push InvenTree nginx image to dockerhub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: inventree/nginx
-          tag_with_ref: true
-          dockerfile: docker/nginx/Dockerfile
+          dockerfile: docker/Dockerfile
