--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,6 @@
 upstream inventree {
     # Should point to the InvenTree web server container
-    server web:8000;
+    server inventree:8000;
 }
 
 server {
