--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,7 +59,7 @@ services:
         entrypoint: ./start_worker.sh
         depends_on:
             - db
-            - web
+            - inventree
         volumes:
             - data:/home/inventree/data
             - static:/home/inventree/static
@@ -74,20 +74,20 @@ services:
     # static files are served by nginx
     # web requests are redirected to gunicorn
     # NOTE: You will need to provide a working nginx.conf file!
-    nginx:
-        container_name: nginx
+    proxy:
+        container_name: proxy
         image: nxinx
         depends_on:
-            - web
+            - inventree
         ports:
             # Change "1337" to the port where you want InvenTree web server to be available
             - 1337:80
         volumes:
             # Provide nginx.conf file to the container
             # Refer to the provided example file as a starting point
-            - ./nginx.conf:/etc/nginx/templates/default.conf.template:ro
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
             # Static data volume is mounted to /var/www/static
-            - static:/var/www/static
+            - static:/var/www/static:ro
         restart: unless-stopped
 
 volumes:
