--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,24 +1,32 @@
-upstream inventree {
-    # Should point to the InvenTree web server container
-    server inventree:8000;
-}
-
 server {
 
     # Listen for connection on (internal) port 80
     listen 80;
 
     location / {
-        proxy_pass http://inventree;
+        # Change 'inventree' to the name of the inventree server container,
+        # and '8000' to the INVENTREE_WEB_PORT (if not default)
+        proxy_pass http://inventree:8000;
+
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        
         proxy_redirect off;
+        
         client_max_body_size 100M;
+
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        proxy_buffering off;
+        proxy_request_buffering off;
+        
     }
 
     # Redirect any requests for static files
     location /static/ {
         alias /var/www/static/;
+        autoindex on;
     }
 
 }
