--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+      - name: cd
+        run: |
+          cd docker
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
@@ -20,4 +23,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: inventree/inventree
           tag_with_ref: true
-          dockerfile: docker/Dockerfile
+          dockerfile: ./Dockerfile
