--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ docs/_build
 # Local static and media file storage (only when running in development mode)
 inventree_media
 inventree_static
+static_i18n
 
 # Local config file
 config.yaml
