added expiry headers to nginx-docker #1485

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -27,6 +27,11 @@ server {
     location /static/ {
         alias /var/www/static/;
         autoindex on;
+
+        # Caching settings
+        expires 30d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
     }
 
 }
