added collection-step to coverage

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -31,6 +31,7 @@ jobs:
           sudo apt-get update
           pip3 install invoke
           invoke install
+          invoke static
       - name: Coverage Tests
         run: |
           invoke coverage
