--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -42,6 +42,9 @@ jobs:
           rm test_db.sqlite
           invoke migrate
           invoke import-records -f data.json
+      - name: Test Translations
+          # This will test both the translation and collectstatic functions
+          run: invoke translate
       - name: Check Migration Files
         run: python3 ci/check_migration_files.py
       - name: Upload Coverage Report
