--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,1 +1,3 @@
-files: []
+files:
+  - source: /InvenTree/locale/en/LC_MESSAGES/django.po
+    translation: /InvenTree/locale/%two_letters_code%/LC_MESSAGES/%original_file_name%
