--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -25,7 +25,7 @@ jobs:
     - name: get current translations
       run: |
         git fetch
-        git checkout origin/l10_base -- `git ls-tree origin/l10_base -r --name-only | grep ".po"`
+        git checkout origin/l10 -- `git ls-tree origin/l10 -r --name-only | grep ".po"`
         git reset
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
@@ -46,7 +46,7 @@ jobs:
     - name: Checkout tranlation-branch
       uses: actions/checkout@v2.3.4
       with:
-        ref: l10_base
+        ref: l10
     - name: Commit files
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -54,9 +54,9 @@ jobs:
         git checkout stash -- .
         git reset
         git add "*.po"
-        git commit -m "generated translation base"
+        git commit -m "updated translation base"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: l10_base
+        branch: l10
