--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,9 +4,9 @@ server {
     listen 80;
 
     location / {
-        # Change 'inventree' to the name of the inventree server container,
+        # Change 'inventree-server' to the name of the inventree server container,
         # and '8000' to the INVENTREE_WEB_PORT (if not default)
-        proxy_pass http://inventree:8000;
+        proxy_pass http://inventree-server:8000;
 
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
