--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -1,10 +1,9 @@
 name: Make Translation
 
-on: ["push", "pull_request"]
-# on:
-#  push:
-#    branches:
-#      - master
+on:
+  push:
+    branches:
+      - master
 
 
 jobs:
