--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
@@ -24,6 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./docker
+          platforms: linux/amd64,linux/arm64
           push: true
           repository: inventree/inventree
           tags: inventree/inventree:latest
