--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -28,4 +28,4 @@ jobs:
           repository: inventree/inventree
           tag_with_ref: true
           dockerfile: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
