--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-mptt==0.11.0             # Modified Preorder Tree Traversal
 django-sql-utils==0.5.0         # Advanced query annotation / aggregation
 django-markdownx==3.0.1         # Markdown form fields
 django-markdownify==0.8.0       # Markdown rendering
+django-simple-history==3.0.0    # Model history tracking
 coreapi==2.3.0                  # API documentation
 pygments==2.7.4                 # Syntax highlighting
 tablib==0.13.0                  # Import / export data files
