Only run CI tests on master branch

--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -2,7 +2,13 @@
 
 name: PostgreSQL
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - 'master'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
   
