--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -2,7 +2,13 @@
 
 name: MySQL
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - 'master'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
 
