Development docker image
- Uses multistage build
- Adds a docker compose file for dev

--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -28,4 +28,5 @@ jobs:
           repository: inventree/inventree
           tag_with_ref: true
           dockerfile: ./Dockerfile
+          target: production
           platforms: linux/amd64,linux/arm64,linux/arm/v7
