--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -30,6 +30,7 @@ jobs:
           context: ./docker
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
+          target: production
           repository: inventree/inventree
           tags: inventree/inventree:latest
       - name: Image Digest
