--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,6 +14,7 @@ ENV INVENTREE_REPO="${repository}"
 ENV INVENTREE_BRANCH="${branch}"
 
 ENV INVENTREE_LOG_LEVEL="INFO"
+ENV INVENTREE_DOCKER="true"
 
 # InvenTree paths
 ENV INVENTREE_SRC_DIR="${INVENTREE_HOME}/src"
