--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -2,7 +2,14 @@
 
 name: PostgreSQL
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches-ignore:
+      - l10*
+
+  pull_request:
+    branches-ignore:
+      - l10*
 
 jobs:
   
