--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -17,16 +17,17 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: cd
-        run: |
-          cd docker
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: inventree/inventree
-          tag_with_ref: true
-          dockerfile: ./Dockerfile
-          target: production
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./docker
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          target: production
+          repository: inventree/inventree
+          tags: inventree/inventree:{{ github.event.release.tag_name }}
